--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -18,6 +18,9 @@
 
 	--pdg-nav-block: 2.5rem;
 	--pdg-main-block: 0rem;
+	--gap-article: 9.75rem;
+	--btn-explore-width: 274px;
+	--btn-explore-shadow-offset: 5rem
 }
 
 
