Final work in index

--- a/starter-code/css/index.css
+++ b/starter-code/css/index.css
@@ -98,7 +98,7 @@ button.explore:hover {
 	ul.navigation {
 		display: none;
 		flex-direction: column;
-		position: absolute;
+		position: fixed;
 		inset: 0;
 		left: auto;
 		gap: 2rem;
